# HeartStoneLoveCoding

./: CMakeLists.txt  README.md  TODO.md  fun_fact.sh  main.cpp  oldMain.cpp  run.sh  run_student.sh
include/: allCards.h  attributes.h  board.h  card.h  deck.h  game.h  gameState.h  hand.h  hero.h  manaPool.h  minion.h  player.h  scripts.h  selectorTool.h  spell.h  utilityclasses.h  weapon.h
src/: board.cpp  deck.cpp  game.cpp  gameState.cpp  hero.cpp  selectorTool.cpp
studentSolution/: charge.cpp  main.cpp
variants/: BOARD_OUTPUT_STYLE.md  TERMS.md  Броня на заказ.md  Кабанчики.md  КешаНаВзлёт.md  НеполноеЗдоровье.md  РРРРРЫВОК.md  урон от заклинаний.md
